Fix lab read more button not showing on ios

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -140,6 +140,7 @@
   flex: 0 0 40vw;
   padding-right: 25px;
   padding-left: 50px;
+  height: 100%;
 
   > div {
     margin: auto;
